// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React interface view renderer: Preact shuold render a stateless view of a block 1`] = `
Array [
  Object {
    "a": "test",
    "nested": ChildCmd {
      "createArgs": Array [
        Object {
          "whoo": 123,
        },
      ],
      "logicClass": [Function],
    },
  },
  Object {
    "isChild": true,
    "whoo": 123,
  },
  Array [
    Object {
      "a": "another",
    },
  ],
  Object {
    "a": "another",
  },
]
`;

exports[`React interface view renderer: Preact shuold subscribe to multiple models and bind multiple messages 1`] = `
Array [
  Object {
    "a": "test",
    "nested": ChildCmd {
      "createArgs": Array [
        Object {
          "whoo": 123,
        },
      ],
      "logicClass": [Function],
    },
  },
  Object {
    "isChild": true,
    "whoo": 123,
  },
  Array [
    Object {
      "a": "another",
    },
  ],
  Object {
    "a": "another",
  },
  Array [
    undefined,
  ],
  Array [
    undefined,
  ],
  Array [
    Object {
      "a": "something",
    },
  ],
  Object {
    "a": "something",
  },
]
`;
